<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.OlvidarContrasenaActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_contrase_a"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        ></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/correo_layout"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_width="300dp"
        android:layout_height="70dp">

        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/fondo_formas"
            android:hint="@string/txt_correo"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/enviar_correo_recuperacion"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#F22E52"
        android:textColor="@color/white"
        android:text="@string/enviar_correo"></Button>

</LinearLayout>