<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragmentos.HorariosDialogoFragment"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horario"
        android:textSize="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>

    <Spinner
        android:id="@+id/dia_semana"
        style="@style/spinner_form"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hora_inicio_layout"
            android:layout_width="250dp"
            style="@style/til_form">

            <EditText
                android:id="@+id/hora_inicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_formas"
                android:hint="@string/hora_inicio"
                android:inputType="time" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/hora_fin_layout"
            style="@style/til_form"
            android:layout_width="250dp">

            <EditText
                android:id="@+id/hora_fin"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="time"
                android:background="@drawable/fondo_formas"
                android:hint="@string/hora_fin"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/agregar_horario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/agergar_horario"
        android:backgroundTint="#F22E52"/>

</LinearLayout>