<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".activities.CrearLugarActivity">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="14dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_tituloRegistroLugar"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:typeface="monospace"
            android:layout_marginBottom="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombre_layout"
            style="@style/til_form">

            <EditText
                android:id="@+id/nombre_lugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_formas"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/descripcion_lugar"
                android:hint="@string/txt_namePlace"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descripcion_layout"
            style="@style/til_form">

            <EditText
                android:id="@+id/descripcion_lugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:lines="8"
                android:background="@drawable/fondo_formas"
                android:hint="@string/txt_descriptionPlace"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/direccion_lugar"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/direccion_layout"
            style="@style/til_form">

            <EditText
                android:id="@+id/direccion_lugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_formas"
                android:hint="@string/txt_direccion_lugar"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/ciudad_lugar"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/ciudad_lugar"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/fondo_formas"
            android:layout_marginTop="10dp" />

        <Spinner
            android:id="@+id/categoria_lugar"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/fondo_formas"
            android:layout_marginTop="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telefono_layout"
            style="@style/til_form">

            <EditText
                android:id="@+id/telefono_lugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:background="@drawable/fondo_formas"
                android:hint="@string/txt_phoneNumber" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="20dp"
            android:background="@color/gray" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="@string/seleccionar_imagen"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/btn_sel_archivo"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_gravity="top"
                android:layout_marginEnd="10dp"
                android:layout_weight="50"
                android:text="@string/seleccionar_archivo" />

            <Button
                android:id="@+id/btn_tomar_foto"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="40"
                android:text="@string/tomar_foto" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/imagenes_seleccionadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="20dp"
            android:background="@color/black" />

        <fragment
            android:id="@+id/mapa_crear_lugar"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="10dp"
            android:background="@color/black" />


        <Button
            android:id="@+id/btn_crear"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/txt_btn_crear"
            android:layout_marginTop="5dp"
            android:backgroundTint="#F22E52"
            android:layout_marginBottom="40dp"/>

    </LinearLayout>
</ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_asignar_horario"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#F22E52"
        android:src="@drawable/ic_horario"/>
</RelativeLayout>