<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="5dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_weight="70">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/usuario_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/header_user"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="10dp"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/fecha_comentario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/fecha_comentario"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/contenido_comentario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contenido_del_comentario"/>

                <LinearLayout
                    android:id="@+id/estrellas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/e_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:fontFamily="@font/font_awesome_6_free_solid_900"
                        android:text="\uf005">
                    </TextView>

                    <TextView
                        android:id="@+id/e_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:fontFamily="@font/font_awesome_6_free_solid_900"
                        android:text="\uf005">
                    </TextView>

                    <TextView
                        android:id="@+id/e_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:fontFamily="@font/font_awesome_6_free_solid_900"
                        android:text="\uf005">
                    </TextView>

                    <TextView
                        android:id="@+id/e_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:fontFamily="@font/font_awesome_6_free_solid_900"
                        android:text="\uf005">
                    </TextView>

                    <TextView
                        android:id="@+id/e_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:fontFamily="@font/font_awesome_6_free_solid_900"
                        android:text="\uf005">
                    </TextView>

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>